--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --verbose --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +17,10 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.11.9"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3",
+    "jshint": "^2.12.0",
+    "supertest": "^6.0.1"
   }
 }
