--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "config": "^3.3.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.3.0",
@@ -23,5 +24,6 @@
     "jest": "^26.6.3",
     "jshint": "^2.12.0",
     "supertest": "^6.0.1"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
