--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "config": "^3.3.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.11.9"
+    "mongoose": "^5.11.9",
+    "nodemailer": "^6.5.0"
   },
   "devDependencies": {
     "jest": "^26.6.3",
