--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll --verbose --runInBand"
+    "test": "jest --watchAll --verbose --runInBand",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -27,5 +28,8 @@
     "jshint": "^2.12.0",
     "supertest": "^6.0.1"
   },
-  "proxy": "http://localhost:3000"
+  "engines": {
+    "node": "12.16.1",
+    "npm": "6.13.4"
+  }
 }
