--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll --verbose --runInBand",
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "npx eslint ."
   },
   "keywords": [],
   "author": "",
