--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,12 +2,19 @@
     "env": {
         "browser": true,
         "commonjs": true,
-        "es2021": true
+        "es2021": true,
+        "jest/globals": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaVersion": 13
     },
     "rules": {
-    }
+        "jest/no-disabled-tests": "warn",
+        "jest/no-focused-tests": "error",
+        "jest/no-identical-title": "error",
+        "jest/prefer-to-have-length": "warn",
+        "jest/valid-expect": "error"
+    },
+    "plugins": ["jest"]    
 }
