--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "eslint": "^8.5.0",
+    "eslint-plugin-jest": "^25.3.2",
     "jest": "^26.6.3",
     "jshint": "^2.12.0",
     "supertest": "^6.0.1"
