--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-jest": "^25.3.2",
     "jest": "^26.6.3",
     "jshint": "^2.12.0",
+    "prettier": "2.5.1",
     "supertest": "^6.0.1"
   },
   "engines": {
